Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>moq.github.io by Moq</title>
+    <title>Moq by Moq</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>moq.github.io</h1>
+          <h1>Moq</h1>
           <p>Test first, mock me later</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Moq">Moq</a></span>
@@ -36,9 +36,9 @@
         </div>
 
         <h1>
-<a name="moqgithubio" class="anchor" href="#moqgithubio"><span class="octicon octicon-link"></span></a>moq.github.io</h1>
+<a name="moq" class="anchor" href="#moq"><span class="octicon octicon-link"></span></a>Moq</h1>
 
-<p>Main site repository</p>
+<p>v5 is coming...</p>
       </section>
 
     </div>
