--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@ title: Moq
 
 <div class="content">
   <div class="related">
+    <h2>Posts</h2>
     <ul>
       {% for post in site.posts %}
       <li>
-	<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+	    <a href="{{ post.url }}">{{ post.title }}</a> <small>on <span>{{ post.date | date: "%B %e, %Y" }}</span></small>
       </li>
       {% endfor %}
     </ul>
