--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@ layout: layout
 title: Moq
 ---
 
-<div>
-    <iframe src="posts.html" id="twitter-widget-1" class="twitter-timeline twitter-timeline-rendered"
-         scrolling="no" frameborder="0" allowtransparency="true" 
-        style="border: none; max-width: 100%; min-width: 180px;" title="Posts Widget" width="300" height="500"></iframe>
+<div class="content">
+  <div class="related">
+    <h2>Posts</h2>
+    <ul>
+      {% for post in site.posts %}
+      <li>
+	    <a href="{{ post.url }}">{{ post.title }}</a> <small>on <span>{{ post.date | date: "%B %e, %Y" }}</span></small>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
 </div>
