updated so that the twitter timeline only shows on the homepage

--- a/index.html
+++ b/index.html
@@ -15,3 +15,10 @@ title: Moq
     </ul>
   </div>
 </div>
+
+        <div style="float: right">
+        <a class="twitter-timeline" width="300" height="500" data-dnt="true" href="https://twitter.com/moqthis" data-widget-id="354857168626925568">Tweets by @moqthis</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+        </script>
+        </div>
+
