Add 'Looking for documentation?' section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@ title: Moq
 
 <div class="content">
   <div class="related">
+    <h2>Looking for documentation?</h2>
+    <ul>
+      <li>For the current version of Moq (v4), see the <a href="https://www.moqthis.com/moq4/">documentation website (work in progress)</a>, or the <a href="https://github.com/moq/moq4/wiki">GitHub project wiki</a>.</li>
+      <li>For the upcoming version of Moq (v5), see the <a href="https://github.com/moq/moq/tree/main/docs">documentation in the GitHub project repo</a>.</li>
+    </ul>
+  </div>
+  <div class="related">
     <h2>Posts</h2>
     <ul>
       {% for post in site.posts %}
